# algosort

./: Cargo.toml
src/: lib.rs  sorts.rs
src/sorts/: bubble_sort.rs  insertion_sort.rs  quick_sort.rs  selection_sort.rs
