[package]
name = "algosort"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Arideno/algosort"
description = """
Implementation of sorting algorithms.
"""
keywords = ["sort", "sorting"]
categories = ["algorithms", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
